# android_usb_camera

./: LICENSE  README.md  config.gradle  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/hsj/sample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/hsj/sample/: DeviceInfo.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml  layout_config.xml
app/src/main/res/layout-land/: activity_main.xml  layout_config.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/com/hsj/sample/: ExampleUnitTest.java
doc/apk/: android_usb_camera.apk
sample/: android.jks  build.gradle
sample/libs/: sdk_usb_camera_v22041815_release.aar
sample/src/main/: AndroidManifest.xml
sample/src/main/java/com/hsj/camera/sample/: DeviceInfo.java  MainActivity.java  PreviewFragment.java
sample/src/main/res/layout/: activity_main.xml  layout_config.xml
sample/src/main/res/menu/: main.xml  menu_main.xml
sample/src/main/res/values/: strings.xml  styles.xml
sample/src/test/java/com/hsj/camera/sample/: ExampleUnitTest.java
sdk_usb_camera/: .gitignore  README.md  build.gradle
sdk_usb_camera/src/main/: AndroidManifest.xml
sdk_usb_camera/src/main/cpp/: CMakeLists.txt  Common.cpp  Common.h  OnLoad.cpp
sdk_usb_camera/src/main/cpp/libcamera/: CMakeLists.txt  Decoder.cpp  Decoder.h  FrameDecoder.cpp  FrameDecoder.h  FrameEncoder.cpp  FrameEncoder.h  FramePreview.cpp  FramePreview.h  FrameProcess.cpp  FrameProcess.h  Preview.cpp  Preview.h  UsbCamera.cpp  UsbCamera.h  UsbMessenger.cpp  UsbMessenger.h
sdk_usb_camera/src/main/cpp/libjpeg-turbo/: CMakeLists.txt
sdk_usb_camera/src/main/cpp/libjpeg-turbo/java/: TJBench.java
sdk_usb_camera/src/main/cpp/libjpeg-turbo/java/org/libjpegturbo/turbojpeg/: TJCompressor.java  TJDecompressor.java  YUVImage.java
sdk_usb_camera/src/main/cpp/libusb/: CMakeLists.txt
sdk_usb_camera/src/main/cpp/libuvc/: CMakeLists.txt
sdk_usb_camera/src/main/cpp/libuvc/include/libuvc/: libuvc.h  libuvc_config.h
sdk_usb_camera/src/main/cpp/libuvc/src/: device.c  init.c
sdk_usb_camera/src/main/cpp/libyuv/: CMakeLists.txt
sdk_usb_camera/src/main/java/com/hsj/camera/: CameraView.java  FrameCallback.java  IFrameCallback.java  Logger.java  UVCCamera.java  UsbCamera.java  UsbMessenger.java
sdk_uvc_camera/: build.gradle
sdk_uvc_camera/src/main/: AndroidManifest.xml
sdk_uvc_camera/src/main/cpp/: CMakeLists.txt
sdk_uvc_camera/src/main/cpp/libcamera/: CMakeLists.txt  common.hpp  frame_converter.cpp  frame_converter.h  frame_decoder.cpp  frame_decoder.h  frame_encoder.cpp  frame_encoder.h  frame_preview.cpp  frame_preview.h  frame_preview_jni.cpp  uvc_camera.cpp  uvc_camera.h  uvc_camera_jni.cpp
sdk_uvc_camera/src/main/cpp/libjpeg-turbo/: CMakeLists.txt
sdk_uvc_camera/src/main/cpp/libjpeg-turbo/java/: TJExample.java  TJUnitTest.java
sdk_uvc_camera/src/main/cpp/libjpeg-turbo/java/org/libjpegturbo/turbojpeg/: TJ.java  TJCustomFilter.java  TJException.java  TJScalingFactor.java  TJTransform.java  TJTransformer.java
sdk_uvc_camera/src/main/cpp/libusb/: CMakeLists.txt
sdk_uvc_camera/src/main/cpp/libusb/android/: config.h
sdk_uvc_camera/src/main/cpp/libuvc/: CMakeLists.txt
sdk_uvc_camera/src/main/cpp/libuvc/include/libuvc/: libuvc.h  libuvc_config.h
sdk_uvc_camera/src/main/cpp/libuvc/src/: stream.c
sdk_uvc_camera/src/main/cpp/libyuv/: CMakeLists.txt
sdk_uvc_camera/src/main/java/com/hsj/camera/: CameraView.java  Logger.java  UVCCamera.java
sdk_uvc_camera/src/main/res/values/: attrs.xml
